anywhere section fix color contrast

--- a/style/_anywhere.scss
+++ b/style/_anywhere.scss
@@ -10,7 +10,8 @@
     }
 
     p {
-        color: $grayish-blue;
+        // color: $grayish-blue;
+        color: #525A60;
     }
 
     img {
