--- a/style/style.css
+++ b/style/style.css
@@ -178,7 +178,7 @@ img {
   color: hsl(210deg, 10%, 33%);
 }
 .anywhere p {
-  color: hsl(201deg, 11%, 66%);
+  color: #525A60;
 }
 .anywhere img {
   margin-top: 1.5rem;
